# HMMath

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/vectors/: Vector2.h  Vector3.h  Vector4.h
